--- a/main.css
+++ b/main.css
@@ -1,7 +1,16 @@
 .header {
 	background-color: #2ecc71;
 	width:100%;
+	height: 200px;
 	padding-bottom: 20px;
+	position: relative;
+	border-bottom: 20px solid #27AE60;
+}
+
+.header h1{
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 
 .main-block {
