--- a/main.css
+++ b/main.css
@@ -21,6 +21,48 @@
 }
 
 .back-background {
-	position: fixed;
+	position: absolute;
 	background-color: rgba(0,0,0,0.8);
 }
+
+.code-box {
+	padding: 20px;
+margin-left: 50px;
+margin-right: 50px;
+background: #BDC3C7;
+}
+
+.placeholdimg {
+	margin-left: 35px;
+}
+
+.separator {
+	border: none;
+	border-top: 1px solid lightgrey;
+	color: #A0A0A0;
+}
+
+.commentbox {
+	margin-left: 30px;
+}
+
+.fullbtn {
+	margin-left: 5%;
+	margin-top: 3%;
+	color: white;
+	background: #C0392B;
+	text-transform: uppercase;
+	font-size: 12px;
+	padding-left: 41%;
+	padding-right: 42%;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border: none;
+	
+
+}
+
+
+
+
+
