--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
+.back-background {
+	position: absolute;
+	background-color: rgba(0,0,0,0.8);
+}
+.main-block {
+	position: relative;
+	background-color: #ECF0F1;
+	width: 50%;
+	left: 25%
+}
+
 .mainheader {
 	background-color: #2ecc71;
 	width:100%;
@@ -5,6 +16,43 @@
 	padding-bottom: 20px;
 	position: relative;
 	border-bottom: 20px solid #27AE60;
+	color: white;
+}
+
+.nav-outer {
+	background-color: #34495E;
+	height: 50px;
+	line-height: 5px;
+	padding: 5px;
+	border-bottom: 5px solid #2C3E50;
+	color: white;
+	text-transform: uppercase;
+}
+
+.nav-outer li{
+	float:right;
+	padding-right: 5%;
+	list-style: none;
+}
+
+aside {
+	position: absolute;
+	width: 220px;
+	left: 100%;
+	color: black;
+	background: #ECF0F1;
+	padding-left: 15px;
+	margin-left: 33px;
+}
+
+.asideheader {
+	margin-left: -30px;
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+aside li{
+	list-style: none;
 }
 
 .headers {
@@ -23,17 +71,10 @@
 	left: 0;
 }
 
-.main-block {
-	position: relative;
-	background-color: #ECF0F1;
-	width: 50%;
-	left: 25%
+table, td, th{
+	border:1px solid black;
 }
 
-.back-background {
-	position: absolute;
-	background-color: rgba(0,0,0,0.8);
-}
 
 .code-box {
 	padding: 20px;
